--- a/Face_Flow/video/templates/index.html
+++ b/Face_Flow/video/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+		<link rel="shortcut icon" href="#">
         <title>Face_Flow</title>
     </head>
     <body>
