--- a/Face_Flow/video/templates/index.html
+++ b/Face_Flow/video/templates/index.html
@@ -1,34 +1,66 @@
 <!DOCTYPE html>
 <html>
-    <head>
-		<link rel="shortcut icon" href="#">
-        <title>Face_Flow</title>
-    </head>
-    <body>
-		<div style="width: 500px; margin: auto;">
-			<fieldset name="Video File Upload and Display">
-				{% if msg %} {% autoescape off %} {{ msg }} {% endautoescape %} {% endif %}
-				<form method="post" action="/" enctype="multipart/form-data">
-					{% csrf_token %}
-					<dl>
-						<p>
-							<label>Browse and select a video file</label>&nbsp;&nbsp;
-							<input type="file" name="file" autocomplete="off" required>
-						</p>
-					</dl>
+
+<head>
+	<link rel="shortcut icon" href="#">
+	<title>Django - Video File Upload and Display</title>
+</head>
+<style>
+	video {
+		width: 100%;
+		max-width: 640px;
+		height: auto;
+	}
+</style>
+
+<body>
+	<div style="width: 500px; margin: auto;">
+		<fieldset name="Video File Upload and Display">
+			{% if msg %} {% autoescape off %} {{ msg }} {% endautoescape %} {% endif %}
+			<form method="post" action="/" enctype="multipart/form-data">
+				{% csrf_token %}
+				<dl>
 					<p>
-						<input type="submit" value="Upload and Display">
+						<label>Browse and select a video file</label>&nbsp;&nbsp;
+						<input type="file" name="file" autocomplete="off" required>
 					</p>
-				</form>
-			</fieldset>
-			
-			{% if filename %}
-				<div style="margin: 10px auto;">
-					<video autoplay="autoplay" controls="controls" preload="preload">
-						<source src="{{ MEDIA_URL }}/{{ filename }}" type="video/mp4"></source>
-					</video>
-				</div>
-			{% endif %}
-		</div>	
-    </body>
+				</dl>
+				<p>
+					<input type="submit" value="Upload and Display">
+				</p>
+			</form>
+
+			<form action="{% url 'downloadFile' filename_output  %}">
+				<button type="submit">Download</button>
+			</form>
+		</fieldset>
+
+		
+		{% if filename %}
+		<div style="margin: 10px auto;">
+			{% load static %}
+			<video autoplay="autoplay" controls="controls" preload="preload">
+				<source src="{{ MEDIA_URL }}/{{ filename }}" type="video/mp4">
+				</source>
+			</video>
+		</div>
+		{% endif %}
+
+		<!--
+		{% if filename_output %}
+		<div style="margin: 10px auto;">
+			{% load static %}
+			<video autoplay="autoplay" controls="controls" preload="preload">
+				<source src="{{ MEDIA_URL }}/{{ filename_output }}" type="video/mp4">
+				</source>
+			</video>
+		</div>
+		{% endif %}-->
+
+		{% if class_num %}
+		<h1> {{ class_num }} </h1>
+		{% endif %}
+	</div>
+</body>
+
 </html>
