--- a/Face_Flow/video/templates/index.html
+++ b/Face_Flow/video/templates/index.html
@@ -184,7 +184,7 @@ button{
 <body>
 
     <div id="loading">
-        <img id="loadingbar"src="/loadingbar.gif">
+        <img id="loadingbar"src="/media/loadingbar.gif">
         <h2>Loading.... </h2>
         <h2>Please wait for a moment.</h2>
     </div>
